--- a/trabalho_estatistica_bacharelado_fisica.ipynb
+++ b/trabalho_estatistica_bacharelado_fisica.ipynb
@@ -2706,6 +2706,7 @@
     }
    ],
    "source": [
+    "# contagem de vereadoras mulheres\n",
     "df_vereadoras_femininas = df_votacao_candidato_vereadores_fortaleza[df_votacao_candidato_vereadores_fortaleza.ds_sexo == \"Feminino\"]\n",
     "df_vereadoras_femininas"
    ]
@@ -2737,12 +2738,14 @@
    "id": "e883e1c0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#contagem de vereadores homens"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8df02472",
+   "id": "edeeb365",
    "metadata": {},
    "outputs": [],
    "source": []
